--- a/Lane_Detect_Py.ipynb
+++ b/Lane_Detect_Py.ipynb
@@ -6,7 +6,7 @@
       "name": "Lane-Detect-Py.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPLRGYQEYUY0iqsWlEx0ODr",
+      "authorship_tag": "ABX9TyOmwWv/mAagjSOlqjZrOD4I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,11 +35,9 @@
       },
       "source": [
         "# **Real Time Road Lane Detection using Open CV Library**\n",
-        "> **An ML assesment as a part of Hack Club UEMK.**\n",
-        "> [LinkedIn](https://www.linkedin.com/company/hackclubuemk/)\n",
-        "> [Facebook](https://www.facebook.com/hackclubuemk/)\n",
+        "> **An ML assesment as a part of Hack Club UEMK.** [LinkedIn](https://www.linkedin.com/company/hackclubuemk/) [Facebook](https://www.facebook.com/hackclubuemk/)\n",
         "---\n",
-        "By Suvra Shaw, Core Member, Hack Club UEMK. Dt. 03 Jul 2021, Thu\n",
+        "**By Suvra Shaw, Core Member, Hack Club UEMK. Dt. 03 Jul 2021, Thu**\n",
         "\n",
         "\n",
         "\n"
